# VQA

./: .gitignore  README.md  pyproject.toml
src/vqa/: __init__.py  build_dataloader.ipynb  check.txt  consensus_distance_from_reads.py  consensus_distance_from_reads.sbatch  evaluate_LLM.py  evaluate_LLM.sbatch  evaluate_binary_LLM.py  evaluate_binary_LLM.sbatch  evaluate_binary_LLM_HCV-1b_ONT_90.sbatch  evaluate_binary_LLM_HCV-1b_ONT_95.sbatch  evaluate_binary_LLM_HCV-1b_PB_90.sbatch  evaluate_binary_LLM_HCV-1b_PB_95.sbatch  evaluate_binary_LLM_command_line.py  evaluate_binary_LLM_command_line.sbatch  evaluate_binary_LLM_command_line_ONT.py  evaluate_binary_LLM_command_line_indelm.py  evaluate_binary_LLM_command_line_nm.py  evaluate_binary_LLM_command_line_nm_03_50.py  evaluate_binary_LLM_command_line_nm_04_75.py  evaluate_binary_LLM_command_line_nm_05_90.py  evaluate_binary_LLM_command_line_nm_09_0.py  evaluate_binary_LLM_deletion.sbatch  evaluate_binary_LLM_hiv_1_100.sbatch  evaluate_binary_LLM_hiv_1_1000.sbatch  evaluate_binary_LLM_hiv_1_1000_ONT.sbatch  evaluate_binary_LLM_hiv_1_1000_ONT_ab.sbatch  evaluate_binary_LLM_hiv_1_100_ONT.sbatch  evaluate_binary_LLM_indel_mutation.sbatch  evaluate_binary_LLM_insertions.sbatch  evaluate_binary_LLM_mutation.sbatch  evaluate_binary_LLM_natural_mixtures.sbatch  evaluate_binary_LLM_natural_mixtures_03_50.sbatch  evaluate_binary_LLM_natural_mixtures_07_98.sbatch  evaluate_binary_LLM_natural_mixtures_09_0.sbatch  evaluate_binary_LLM_natural_mixtures_subsample.sbatch  evaluate_binary_LLM_sars_cov_2.sbatch  evaluate_consensus.py  (+34 more)
(+115 files in other folders)
